# gray-scott

./: CMakeLists.txt  build.sh  gray-scott.cpp  gray-scott.h  json.hpp  main.cpp  settings-files.json  settings.cpp  settings.h
